tests/testdata/negative/redeclare.go
package main
func main() {
  y := 1;
  y := 2;
  fmt.Println(y);
}
